# raspberry-app

./: .clang-fomat  .clang-tidy  .gitignore  CMakeLists.txt  README.md  analog-writer.cpp  build.sh  compile-arm64.sh  compile-x86.sh  compile.sh  config.cmake  main.cpp  run.sh  toolchain-aarch64.cmake  toolchain-arm64.cmake  toolchain-x86.cmake
include/: Device.hpp  EventManager.hpp  Gpio.hpp  GraphicSdlDefines.hpp  Graphics.hpp  PinState.hpp  QRManager.hpp  SDL.hpp  SDLManagerTypes.hpp  SDLTypes.hpp
include/SDL/: Render.hpp  Surface.hpp  Texture.hpp  Window.hpp
src/: CMakeLists.txt  Device.cpp  EventManager.cpp  Gpio.cpp  Graphics.cpp  QRManager.cpp  Render.cpp  Renderer.cpp  Surface.cpp  Window.cpp
src/SDL/: Render.cpp  Surface.cpp  Texture.cpp  Window.cpp
